# Grotifer

./: .gitignore  AttitudeControLREADME.md  CMakeLists.txt  README.md
MasterLibrary/: GrotiferMaster.hpp
MasterLibrary/ExampleStructureFiles/: basetask.cpp  basetask.hpp  main.cpp  task1.cpp  task2.cpp  task3.cpp  tasks.hpp  timerutilities.cpp  timerutilities.hpp
MasterLibrary/GrotiferHardware/: Actuators.cpp  Actuators.hpp  Sensors.cpp  Sensors.hpp  labjackusb.c  labjackusb.h  u6.c  u6.h
MasterLibrary/GrotiferSoftware/AttitudeDetermination/: AngVelClass.cpp  AttitudeDetermination.hpp  BackwardSolClass.cpp  ForwardSolClass.cpp  asa047.cpp
MasterLibrary/GrotiferSoftware/AttitudeDetermination/Documentation/: AngVelGuide.md  BackSolGuide.md
MasterLibrary/GrotiferSoftware/SoftwareFunctions/: MovingAverage.cpp  MovingAverage.h  SoftwareFunctions.cpp  SoftwareFunctions.hpp
MasterLibrary/RestructuredFiles/: basetask.cpp  basetask.hpp
docs/: DETUMBLING.md  LOGGING_README.md  MOVING.md  README.md
include/: BaseTask.hpp  Config.hpp  Devices.hpp  Factory.hpp  Logger.hpp  Tasks.hpp
include/core/: BaseTask.hpp  Filters.hpp  LockFreeRingBuffer.hpp  LockFreeRingBuffer.tpp
include/core/control/: PIControl.hpp
include/core/solvers/: AngularVelocitySolver.hpp  MotionProfileSolver.hpp  MovingAverage.hpp  TriadSolver.hpp
include/core/utils/: Env.hpp  LogHelpers.hpp  RotationHelpers.hpp  TimeUtils.hpp
include/dotenv/: dotenv.h
include/hardware/: Actuator.hpp  Fan.hpp  MaxonMotor.hpp  ThreeAxisActuator.hpp
include/hardware/actuators/: Actuator.hpp  Fan.hpp  MaxonMotor.hpp  StepperMotor.hpp  ThreeAxisActuator.hpp  TorpMaxonActuator.hpp  TorpStepperActuator.hpp  enums.hpp
include/hardware/sensors/: Inclinometer.hpp  Labjack.hpp  Sensors.hpp  SunSensor.hpp
include/tasks/: AttitudeControlTask.hpp  TaskCoordinator.hpp  TorpControlTask.hpp
include/utils/: RotationHelpers.hpp
plotting/: animated.py  graph.py  requirements.txt
src/: Devices.cpp  main.cpp  main.md
src/core/: BaseTask.cpp  Config.cpp
src/core/control/: PIControl.cpp
src/core/solvers/: AngularVelocitySolver.cpp  MotionProfileSolver.cpp  MovingAverage.cpp  TriadSolver.cpp
src/hardware/: Fan.cpp  MaxonMotor.cpp  ThreeAxisActuator.cpp
src/hardware/actuators/: Fan.cpp  MaxonMotor.cpp  StepperMotor.cpp  ThreeAxisActuator.cpp  TorpMaxonActuator.cpp  TorpStepperActuator.cpp
src/hardware/sensors/: Inclinometer.cpp  Labjack.cpp  SunSensor.cpp
src/scripts/: retractMass.cpp
src/solvers/: AngularVelocitySolver.cpp  TriadSolver.cpp
src/tasks/: AttitudeControl.cpp  BaseTask.cpp  Devices.cpp  TaskCoordinate.cpp  TaskCoordinator.cpp  TorpControl.cpp  TorpMasterControl.cpp
src/tests/: stepper.cpp
